Updated readme, added heap analysis for Optional test